Revert "Refatorando todos os gargalos"
This reverts commit a5f15d616c55da53ed993b5b88f1ed1f61edd4d5.